use set for expectedErrors, fix the alert overflow

--- a/app/public/css/styles.css
+++ b/app/public/css/styles.css
@@ -559,7 +559,7 @@ button[data-balloon] {
 .alert-content {
   text-align: left;
   max-height: 300px;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 .alert.sidebar {
